app-node-tem/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-node-service
spec:
  selector:
    app.kubernetes.io/name: app-node-tem
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
